Skapa en startsida
Gör så man kan navigera enkelt från och tillbaka mellan startsida och uppgifter samt några andra små förändringar.

--- a/uppgift1/index.html
+++ b/uppgift1/index.html
@@ -8,6 +8,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Inspect -> Console</h1><br><br>
+
+    <p><a href="/javascript/Form-Validering-Uppgifter/start.html">Gå tillbaka till start</a></p>
 </body>
 </html>
