--- a/uppgift3/index.html
+++ b/uppgift3/index.html
@@ -22,6 +22,8 @@
             <input type="submit" value="Submit">
         </form>  
     </div>
-</fieldset>
+</fieldset><br><br>
+
+<p><a href="/javascript/Form-Validering-Uppgifter/start.html">Gå tillbaka till start</a></p>
 </body>
 </html>
