--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>HTML/JS Uppgifter</h1>
-    <p><a href="/javascript/Form-Validering-Uppgifter/uppgift1/index.html">Gå till Uppgift 1</a></p><br>
-    <p><a href="/javascript/Form-Validering-Uppgifter/uppgift2/index.html">Gå till Uppgift 2</a></p><br>
-    <p><a href="/javascript/Form-Validering-Uppgifter/uppgift3/index.html">Gå till Uppgift 3</a></p>
+    <p><a href="uppgift1/index.html">Gå till Uppgift 1</a></p><br>
+    <p><a href="uppgift2/index.html">Gå till Uppgift 2</a></p><br>
+    <p><a href="uppgift3/index.html">Gå till Uppgift 3</a></p>
 </body>
 </html>
